--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -4,6 +4,10 @@ spring:
     username: root
     password: dRLzf8dSGOnL3Ui32KCD
     name: railway
+  servlet:
+    multipart:
+      max-file-size : 10MB
+      max-request-size : 10MB
 
   sql:
     init:
