--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 server.address=0.0.0.0
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+server.max-http-header-size=10MB
+
